src/css/style.css
* {
    /* box-sizing: border-box; */
    padding: 0px;
    margin: 0px;
    border: none;
    background-color: transparent;
    list-style: none;
    font-style: none;
}

:root {
    --bee: #FFD55A;
    --leaf: #a3c560;
    --greenish: #53ac75;
    --lake: #0c8c81;
    --ocean: #176a77;
    --navy:#2f4858;
    --mustard: #fde18d;
    

    --primary-color: var(--bee);
    --secondary-color: var(--leaf);
    --dark-primary-color: var(--navy);
    --dark-secondary-color: var(--ocean);
}

body {
    background-color: var(--primary-color);
}

.title, .subtitle, .navbar  {    
    font-family: "Happy monkey", sans-serif;
    font-size: 140%;
}

p ,h1, h2, h3, h4, h5, h6{
    font-family: 'Proza Libre', sans-serif;
}

a {
   font-style: normal; 
   color: black;
}

a:visited {
    color: black;
}



.navbar {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr ;
    background-color: var(--primary-color);
    
    position: relative;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    
}

.navbar-link {
    padding: 0em 0.5em;
    margin: 1em;
}

.logo {
    font-size: 120%;
    margin: 5% auto;
}

.navbar-link:hover, .logo:hover {
    transform:translateY(-8%);
    transition: translateY 300ms;
    transition-timing-function: ease;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;   
}

.left {
    display: flex;
    justify-content: start;
    align-items: center;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.right {
    display: flex;
    justify-content: end;
    align-items: center;
}

#face {
    transition: transform 300ms;
    transition-timing-function: ease-out;
    flex: 1 auto;
    max-width: 40%;
}

#face:hover {
    transform:scale(1.1);
    transition: transform 120ms;
    transition-timing-function: ease;    
}

.hero {
    padding: 3%;
    
    display: flex;
    flex-direction: column;
    align-items: center;

    line-height: 1.8;
    font-size: 120%;
}

.fa-arrow-down {
    font-size: 150%;
    transform:scale(1.5) ;
}

.main-wrapper {
    display: grid;
    grid-template-columns: 1fr min(1100px, 100%) 1fr;
    
}

.main-wrapper > * {
    grid-column: 2;
  }

.page-content {
    border-radius: 10px;
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;   
}


.projects {
    display: flex;
    flex-wrap: wrap;
    padding: 3%;
    /* margin-top: 3%; */
    justify-content: space-around;
}


.projects-wrapper {
    padding-top: 5%;
    padding-bottom: 3%;
    margin-bottom: 5%;
}

@media screen and (max-width: 1000px) {
    .projects {
        grid-template-columns: repeat(2, 1fr);
    }   
}


@media screen and (max-width: 650px) {
    .projects {
        grid-template-columns: repeat(1, 1fr);
    }   
    .face-button {
        opacity: 0%;
    }
}

.card {
    display: flex;
    justify-content: center;
}

.project-card {
    
    margin: 4%;
    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    border-radius: 5%;
    max-width: 300px;

    transition: transform 50ms;
    background-color: white;
}

.project-card:hover {
    transform: scale(1.1);
    transition: transform 50ms;
}

.card-title {
    margin: 5%;
    font-size: 180%;
}

.projects-header {
    text-align: center;
    margin-bottom: 20px;
    font-size: 180%;
}

.footerbar {
    /* background-color: var(--mustard); */
    margin-top: 7%;
    padding: 5%;
}

.footer-grid {
    /* padding: 5%; */
    display: grid;
    grid-template-columns: 1fr 1fr 1fr ;
    padding: 1em;

    
}

.divider.gray {
    border-top: 3px solid rgb(226, 226, 226);
    border-radius: 5px;
    margin: 0% 3%;
}

.divider.primary-color {
    /* border-top: 5px solid var(--dark-primary-color);  */
    border-top: 7px solid var(--mustard);
    border-radius: 5px;
    margin: 0% 1%;
}

.greeting {
    font-size: 2em;
    
    
}

/* Underline */
strong {
    position: relative;
}
strong::after {
    content: "";
    position: absolute;
    z-index: -1;
    background-image: url("/img/underline-charcoal.svg");
    background-repeat: no-repeat;
    background-size: cover;
}

/* Underline height, width */
h1 > strong::after {
    bottom: -0.2rem;
    height: 0.95rem;
    left: -0.25rem;
    right: -0.25rem;
}

.about-header {
    padding: 3%;
    padding-bottom: 0%;
    
    display: flex;
    flex-direction: column;
    align-items: center;

    line-height: 1.1;
    font-size: 120%;
}

.about-card  {
    margin-top: 3%;
    margin-bottom: -3%; 
    min-width: min(200px, 100%);
    padding: 1em;

    border-radius: 8px;

    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    
    background-color: var(--primary-color);
}

.about {
    display: grid;
    grid-template-columns: 1fr min(500px, 100%) 1fr;
    padding: 7% 0%;
    position: relative;
}
.about > * {
    grid-column: 2;
}

